--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,14 +9,59 @@
 </head>
 <body>
     <main id="main">
-        <h1 id="title">Title</h1>
+        <h1 id="title">Володимир Івасюк</h1>
         <div id="img-div">
-          <img id="image" src="#" alt="picture">
-          <p id="img-caption">image caption</p>
+          <img id="image" src="img/ivasyuk.webp" alt="picture">
+          <p id="img-caption">Український композитор і поет</p>
         </div>
         <div id="tribute-info">
-          <h2 id="tribute-info__title">Title</h2>
-            <a id="tribute-link" href="#" target="_blank"></a>
+          <h2 id="tribute-info__title">Життєпис</h2>
+          <div class="year">
+            <p class="year-number">1949</p>
+            <span class="year-description">Володимир Івасюк народився 4 березня 1949 року в місті Кіцмань Чернівецької області в родині учителів Михайла Івасюка і Софії Карякіної. Мати родом із Запорізької області.</span>
+          </div>
+          <div class="year">
+            <p class="year-number">1955</p>
+            <span class="year-description">1955 року, коли Володимирові було 5 з половиною років, пішов учитися зі спеціальності скрипка до місцевої дитячої музичної школи, створеної зусиллями батька. </span>
+          </div>
+          <div class="year">
+            <p class="year-number">1963</p>
+            <span class="year-description">1963 закінчив Кіцманську музичну школу. Влітку вступив до Київської музичної десятирічки імені Миколи Лисенка[15] за спеціальністю альт. Навчався лише протягом першої чверті. З другої, через хворобу, повернувся до Кіцмані та навчався у середній та музичній школах за класом фортепіано.</span>
+          </div>
+          <div class="year">
+            <p class="year-number">1964</p>
+            <span class="year-description">1964 року написав музику до першої пісні «Колискова» на вірші батька. У рідній школі створив дівочий вокальний ансамбль «Буковинка». </span>
+          </div>
+          <div class="year">
+            <p class="year-number">1966</p>
+            <span class="year-description">Разом із сім'єю переїхав до Чернівців. Вступив до Чернівецького державного медичного інституту, але першого ж дня його відрахували за випадок з пам'ятником Леніна (у квітні того року, за два місяці до закінчення школи, Івасюк з однокласниками випадково скинули бюст Леніна у Кіцмані)</span>
+          </div>
+          <div class="year">
+            <p class="year-number">1972</p>
+            <span class="year-description">Переїхав до Львова. Там навчався в медичному інституті й розпочав студії у консерваторії на підготовчому відділенні. </span>
+          </div>
+          <div class="year">
+            <p class="year-number">1974</p>
+            <span class="year-description">У серпні 1974 року в складі радянської делегації взяв участь у міжнародному пісенному конкурсі «Сопот-74», де Софія Ротару виконала його пісню «Водограй»[25]. Із сестрою Галиною здійснив коротку подорож Польщею. </span>
+          </div>
+          <div class="year">
+            <p class="year-number">1975</p>
+            <span class="year-description">У серпні-вересні 1975 року в селі Розтоки на Буковині режисер Віктор Стороженко зняв фільм «Пісня завжди з нами», в якому Софія Ротару виконала 6 пісень В. Івасюка.</span>
+          </div>
+          <div class="year">
+            <p class="year-number">1976</p>
+            <span class="year-description">У липні 1976 року В. Івасюка відрахували з консерваторії за те, що під час зйомок цього фільму він пропускав заняття. Створив музику до вистави «Мезозойська історія» у Дрогобицькому обласному муздрамтеатрі.</span>
+          </div>
+          <div class="year">
+            <p class="year-number">1978</p>
+            <span class="year-description">У квітні 1978 року взяв участь у Всесоюзному конкурсі молодих композиторів у Єревані. Піаністка Л. Десяткіна виконала на конкурсі «Сюїту-варіації» на тему народної пісні «Сухая верба» В. Івасюка.</span>
+          </div>
+          <div class="year">
+            <p class="year-number">1979</p>
+            <span class="year-description">У квітні 1979 року був членом журі I Республіканського конкурсу артистів естради в Хмельницькому. Виїхав до Львова в ніч з 23 на 24 квітня.</span><br>
+            <span class="year-description">24 квітня 1979 року за телефонним викликом вийшов з дому і більше не повернувся. 18 травня тіло Володимира Івасюка випадково знайшли в Брюховицькому лісі під Львовом. Точна дата смерті невідома. 22 травня відбувся похорон Володимира Івасюка на Личаківському цвинтарі. </span>
+          </div>
+            <a id="tribute-link" href="https://uk.wikipedia.org/wiki/%D0%86%D0%B2%D0%B0%D1%81%D1%8E%D0%BA_%D0%92%D0%BE%D0%BB%D0%BE%D0%B4%D0%B8%D0%BC%D0%B8%D1%80_%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%BE%D0%B2%D0%B8%D1%87" target="_blank">Дізнатись більше про життя Володимира Івасюка можна за посиланням</a>
         </div>
       </main>
 </body>
